# Bailey-Forbes-Flinstone

./: .gitignore  AGENTS.md  BPForbes_Flinstone_Tests.c  CMakeLists.txt  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  cdinter_extra2_disk.txt  cluster.c  common.c  common.h  dir_asm.c  dir_asm.h  disk.c  disk_asm.c  disk_asm.h  drive.txt  fs.c  fs.h  fs_chain.h  fs_command.c  fs_events.c  fs_facade.c  fs_facade.h  fs_policy.c  fs_policy.h  fs_provider.c  fs_provider.h  fs_service_glue.c  fs_service_glue.h  interpreter.c  main.c  mem_asm.h  mem_asm.s  path_log.c  path_log.h  priority_queue.c  priority_queue.h  shell_history.txt  (+9 more)
.github/workflows/: c-cpp.yml  pages-wasm.yml
ARM/alloc/: alloc.h  alloc_core.s  alloc_free.s  alloc_malloc.s
ARM/drivers/: port_io.h  port_io.s
VM/: CMakeLists.txt  vm.c  vm.h  vm_cpu.c  vm_cpu.h  vm_decode.c  vm_decode.h  vm_disk.c  vm_disk.h  vm_display.h  vm_font.c  vm_font.h  vm_host.c  vm_host.h  vm_io.c  vm_loader.h  vm_mem.h  vm_sdl.c  vm_sdl.h  vm_snapshot.c  vm_snapshot.h
VM/devices/: vm.c  vm_arch.c  vm_arch.h  vm_cpu.c  vm_cpu.h  vm_decode.h  vm_disk.c  vm_display.c  vm_host.c  vm_io.c  vm_io.h  vm_loader.c  vm_mem.c
VM/drivers/: driver_types.h  drivers.h
alloc/: alloc.h  alloc_core.s  alloc_malloc.s
arch/arm/gas/: alloc_core.s  alloc_free.s  alloc_malloc.s  mem_asm.s  port_io.s  spinlock.s
arch/wasm/: host_stubs.c
arch/x86_64/gas/: mem_asm.s  port_io.s  spinlock.s
arch/x86_64/gas/alloc/: alloc_free.s
arch/x86_64/nasm/: alloc_core.asm  alloc_free.asm  alloc_malloc.asm  mem_asm.asm  port_io.asm
cmake/Modules/: DetectWSL.cmake  NASM.cmake  Warnings.cmake
cmake/Toolchains/: aarch64.cmake  x86_64.cmake
docs/: ARCH.md  CONCURRENCY_AUDIT.md  DRIVER_ARCHITECTURE.md  GUEST_CONTRACT.md  IO_STACK.md  VM_ARCHITECTURE_IMPROVEMENTS.md  VM_DEVICE_BOUNDARY.md  VM_IMPLEMENTATION_PLAN.md  VM_OPCODE_SUBSET.md  architecture.md  build.md  milestone-Improve-Sys-Architecture.md  vm.md
docs/baseline/: port_ranges.md  vm_opcodes.txt
drivers/: block_driver.c  display_driver.c  display_driver.h  driver_types.h  drivers.h  keyboard_driver.c  mmio.h  pic_driver.c  port_io.h  timer_driver.c
kernel/: CMakeLists.txt
kernel/arch/aarch64/: CMakeLists.txt  arm_plat.h
kernel/arch/aarch64/asm/: memcpy.S
kernel/arch/aarch64/boot/: exc_dispatch.c  spinlock.s  vectors.h  vectors.s
kernel/arch/aarch64/drivers/: block_driver.c  display_driver.c  driver_caps.h  driver_types.h  keyboard_driver.c  pci.c  pic_driver.c  port_io.S  port_io.h  ramdisk.h  ramdisk.s  timer_driver.c
kernel/arch/aarch64/hal/: arm_gic.c  arm_gic.h  arm_plat.c  arm_timer.c  arm_timer.h  arm_uart.c  arm_uart.h  ioport.c
kernel/arch/aarch64/include/: mem_asm.h
kernel/arch/wasm/include/: mem_asm.h
kernel/arch/x86_64/: CMakeLists.txt
kernel/arch/x86_64/asm/: alloc_core.asm  alloc_malloc.asm
kernel/arch/x86_64/boot/: gdt.h  gdt.s  idt.h  idt.s  idt_dispatch.c  idt_host.c  spinlock.s
kernel/arch/x86_64/drivers/: ata_pio.h  ata_pio.s  ata_pio_baremetal.c  block_driver.c  block_driver.h  display_driver.c  driver_caps.h  driver_types.h  drivers.c  io.h  keyboard_driver.c  keyboard_driver.h  pci.c  pci.h  pic_driver.c  pic_driver.h  port_io.asm  port_io.h  port_io.s  timer_driver.h
kernel/arch/x86_64/hal/: block_transport_host.c  ioport.c
kernel/core/boot/: boot_init.c  boot_init.h
kernel/core/mm/: dir_asm_host.c  kmalloc.c  mem_domain.c  mem_domain.h  pmm.c  pmm.h
kernel/core/sched/: priority_queue.c  threadpool.c  threadpool.h
kernel/core/sys/: ipc.c  spinlock.h  syscall.c  vrt.h
kernel/core/vfs/: disk.c  fs.c  fs_chain.c  fs_command.h  fs_events.h  fs_facade.c  fs_facade.h  fs_jail.c  fs_jail.h  fs_provider.c  fs_service_glue.c  fs_service_glue.h  fs_types.h  path_log.c  path_log.h  vfs.c
kernel/drivers/: bus.c  display_driver.c  driver_model.c  drivers.c  drivers.h  fl_cstr.h  keyboard_driver.c  pic_driver.c  timer_driver.c
kernel/drivers/block/: block_driver.c  block_driver.h  block_transport_baremetal.c  block_transport_host.c
kernel/include/: priority_queue.h
kernel/include/fl/: arch.h  drivers.h  ipc.h  mem_asm.h  mm.h  sched.h  syscall.h  vfs.h
kernel/include/fl/driver/: block.h  bus.h  caps.h  console.h  devfs.h  device.h  driver.h  driver_caps.h  driver_types.h  drivers.h  ioport.h  irq.h  mmio.h  net.h  pci.h
scripts/: baseline_tests.sh  build_aarch64.sh  build_wsl.sh  build_x86_64.sh  check_layers.sh  check_no_stubs.sh  run_vm_wsl.sh  wsl_vm.sh
src/: BPForbes_Flinstone_Tests.c  priority_queue.h
tests/: CMakeLists.txt  test_alloc.c  test_drivers.c  test_fs_jail.c  test_invariants.c  test_mem_asm.c  test_priority_queue.c  test_replay.c  test_userspace_connection.c  test_vm_arch_readiness.c  test_vm_layer_warning.c  test_vm_mem.c  test_vm_syscall_bridge.c
userland/: CMakeLists.txt
userland/coreutils/: CMakeLists.txt
userland/shell/: CMakeLists.txt  common.c  common.h  interpreter.c  sh.c  util.c  util.h
vm/: vm.c  vm_decode.c  vm_decode.h  vm_io.c  vm_io.h  vm_loader.h
wasm/: index.html  pre.js  serve_coi.c  serve_coi.cpp  serve_coi.py
wasm/github-pages/: README.md
x86-64 (NASM)/: mem_asm.asm  mem_asm.h
x86-64 (NASM)/alloc/: alloc.h  alloc_free.asm
x86-64 (NASM)/drivers/: port_io.h
